--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 :root {
-    --mdc-theme-primary: #6200ee;
-    --mdc-theme-secondary: #018786;
+    --mdc-theme-primary: #346A1F;
+    --mdc-theme-secondary: #F7FFED;
     --mdc-theme-on-primary: #ffffff;
     --mdc-theme-on-secondary: #000000;
 }
@@ -9,14 +9,13 @@ body {
     font-family: 'Open Sans', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f5f5f5;
+    background-color: var(--mdc-theme-secondary);
 }
 
 .title {
-    color: var(--mdc-theme-primary);
-    text-align: center;
+    margin: 30px;
     font-size: 2em;
-    font-weight: bold;
+    font-weight: 400;
     margin-top: 20px;
 }
 
@@ -47,15 +46,20 @@ body {
     border-collapse: collapse;
 }
 
-#deals-table th, #deals-table td {
-    border: 1px solid #ddd;
+#deals-table td, #deals-table th {
+    border: none;
     padding: 15px;
     text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+
+#deals-table tr:last-child td {
+    border-bottom: none;
 }
 
 #deals-table th {
-    background-color: var(--mdc-theme-primary);
-    color: var(--mdc-theme-on-primary);
+    font-weight: 600;
+    color: #1A1C18
 }
 
 .buttons-container {
@@ -71,14 +75,33 @@ body .pagination-button {
     background-color: var(--mdc-theme-primary);
     color: var(--mdc-theme-on-primary);
     border: none;
-    border-radius: 4px;
+    border-radius: 100px;
     padding: 10px 20px;
     margin: 20px 10px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.1);
 }
 
 body .pagination-button:hover {
+    filter: brightness(90%);
+}
+
+.select-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.select-text {
+    margin-right: 10px;
+}
+
+#deals-select {
+    background: transparent;
+    border: none;
+}
+
+.select-items {
     background-color: var(--mdc-theme-secondary);
-    color: var(--mdc-theme-on-secondary);
 }
